:bug: Catnip: Prevent Note's textareas from being fully collapsed

--- a/src/styl/tags/shared/scriptables/catnip-block.styl
+++ b/src/styl/tags/shared/scriptables/catnip-block.styl
@@ -246,6 +246,7 @@ catnip-block, .catnip-block
             background transparent
             transition unset
             height 1.5rem
+            min-height 1.25rem
         &.selected
             background mix(mix(background, yellow, 90%), act, 80%)
     &.group
